# phronetic-ai-audioinpainting

./: .gitignore  .pre-commit-config.yaml  README.md  literature_review.md  project_plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/data/: english.yaml  vaani.yaml
data/eda/: audio_eda.ipynb
data/eda/english/: EDA.md  NISQA_corpus_download.ipynb  NISQA_corpus_eda.ipynb  NPTEL2020_EDA.ipynb  NPTEL2020_EDA_Inpainting.ipynb  network_connectivity_examples.ipynb
data/eda/hindi/: audio_eda.ipynb
docs/: discussions.md  project_plan.md
samples/preprocessed_audio/: sample_01.json  sample_02.json  sample_03.json  sample_04.json  sample_05.json  sample_06.json  sample_07.json  sample_08.json  sample_09.json  sample_10.json
scripts/: emulate_network_connectivity.py  eval_inpainting.py  prepare_vaani_hindi.py  preview_telephony_audio.py  setup_notebook_env.sh  train_inpainting.py  visualize_masks.py
src/: config.py
src/data/: manifest.py  vaani.py
src/utils/: audio.py  distributed.py  stft.py
tests/: test_manifests.py
