[project]
name = "audio-inpainting"
version = "0.1.0"
description = "English speech inpainting for recorded customer call restoration (Hindi data kept separately for future work)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "lightning>=2.2",
    "transformers>=4.38",
    "datasets>=2.18",
    "librosa>=0.10",
    "soundfile>=0.12",
    "wandb>=0.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "evaluate>=0.4",
    "pydantic>=2.6",
    "torchcodec>=0.10.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
notebooks = [
    "ipywidgets>=8.1",
    "jiwer>=3.0",
    "jupyterlab>=4.0",
    "nltk>=3.9",
    "pandas>=2.2",
    "pydub>=0.25",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
